--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 50-0 J - 35423125.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 50-0 J - 35423125.md
@@ -4,7 +4,7 @@ Les pertes ou déchets constatés en cours d'élaboration, de transformation et 
 alcooliques, doivent être inscrits par l'entrepositaire agréé dans la colonne “ sorties ” de sa comptabilité matières, par
 tarif d'imposition et par produit concerné tel que défini aux articles 286 I et 286 J de l'annexe II au code général des
 impôts. L'exonération attribuée s'applique par entrepôt fiscal suspensif de droits d'accises, par type d'opération et selon
-les distinctions prévues aux articles 286 I et J de l'annexe II au code général des impôts. 
+les distinctions prévues aux articles 286 I et 286 J de l'annexe II au code général des impôts.
 
 Les pertes accidentelles doivent être signalées immédiatement à l'administration. Elles sont inscrites en sorties dans la
 comptabilité matières. Ces pertes ne font pas l'objet d'une taxation dès lors qu'elles sont admises par l'administration
@@ -12,10 +12,10 @@ après examen de la demande d'admission en décharge présentée par l'entreposi
 
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Arrêté du 9 août 2017 - art. 1
+  - Arrêté du 20 juin 2018 - art. 1
 
 _Cite_:
 
-  - Code général des impôts, annexe 2, CGIAN2. - art. 286 I (V)
+  - Code général des impôts, annexe 2, CGIAN2. - art. 286 I
