--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 50-0 N - 35423133.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 50-0 N - 35423133.md
@@ -1,17 +1,17 @@
 # Article 50-0 N
 
 Pour les alcools produits à partir d'unités agréées sous le régime général des distilleries industrielles, tel que prévu aux
-articles 311 biset 57 à 77 de l'annexe I au CGI, l'entrepositaire agréé peut opter pour un taux annuel de pertes global de
-1,5 % sur les quantités expédiées.
+articles 311 biset 57 à 77 de l'annexe I au code général des impôts, l'entrepositaire agréé peut opter pour un taux annuel de
+pertes global de 1,5 % sur les quantités expédiées.
 
 L'opérateur qui souhaite bénéficier de cette option doit en faire la demande auprès de l'administration des douanes et droits
 indirects, avant le début de son exercice commercial.
 
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Arrêté du 9 août 2017 - art. 1
+  - Arrêté du 20 juin 2018 - art. 1
 
 _Cite_:
 
