--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 018 - 6302060.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 018 - 6302060.md
@@ -1,48 +1,48 @@
 # Article 18
 
-Pour l'année 2017, les limites de chaque tranche du tarif de la retenue à la source applicable aux traitements, salaires,
+Pour l'année 2018, les limites de chaque tranche du tarif de la retenue à la source applicable aux traitements, salaires,
 pensions et rentes viagères servis à des personnes qui ne sont pas fiscalement domiciliées en France sont fixées comme suit :
 
 <table border="1">
   <tbody>
     <tr>
-      <th rowspan="2">
+      <td align="center" rowspan="2">
 
-TAUX APPLICABLES</th>
-      <th colspan="5">
+Taux
 
-LIMITE DES TRANCHES SELON LA PÉRIODE À LAQUELLE SE RAPPORTENT LES PAIEMENTS
+applicables</td>
+      <td align="center" colspan="5">
 
-</th>
+Limite des tranches selon la période à laquelle se rapportent les paiements</td>
     </tr>
     <tr>
-      <th>
+      <td align="center">
 
 Année
 
-(en euros)</th>
-      <th>
+(en euros)</td>
+      <td align="center">
 
 Trimestre
 
-(en euros)</th>
-      <th>
+(en euros)</td>
+      <td align="center">
 
 Mois
 
-(en euros)</th>
-      <th>
+(en euros)</td>
+      <td align="center">
 
 Semaine
 
-(en euros)</th>
-      <th>
+(en euros)</td>
+      <td align="center">
 
-Jour ou fraction
+Jour
 
-de jour
+ou fraction de jour
 
-(en euros)</th>
+(en euros)</td>
     </tr>
     <tr>
       <td align="center">
@@ -57,22 +57,22 @@ de jour
     <tr>
       <td align="center">
 
-– moins de</td>
+- moins de</td>
       <td align="center">
 
-14 461</td>
+14 605</td>
       <td align="center">
 
-3 615</td>
+3 651</td>
       <td align="center">
 
-1 205</td>
+1 217</td>
       <td align="center">
 
-278</td>
+281</td>
       <td align="center">
 
-46</td>
+47</td>
     </tr>
     <tr>
       <td align="center">
@@ -90,19 +90,19 @@ de jour
 - de</td>
       <td align="center">
 
-14 461</td>
+14 605</td>
       <td align="center">
 
-3 615</td>
+3 651</td>
       <td align="center">
 
-1 205</td>
+1 217</td>
       <td align="center">
 
-278</td>
+281</td>
       <td align="center">
 
-46</td>
+47</td>
     </tr>
     <tr>
       <td align="center">
@@ -110,19 +110,19 @@ de jour
 - à</td>
       <td align="center">
 
-41 951</td>
+42 370</td>
       <td align="center">
 
-10 488</td>
+10 593</td>
       <td align="center">
 
-3 496</td>
+3 531</td>
       <td align="center">
 
-807</td>
+815</td>
       <td align="center">
 
-134</td>
+136</td>
     </tr>
     <tr>
       <td align="center">
@@ -137,32 +137,32 @@ de jour
     <tr>
       <td align="center">
 
-– au delà de</td>
+- au delà de</td>
       <td align="center">
 
-41 951</td>
+42 370</td>
       <td align="center">
 
-10 488</td>
+10 593</td>
       <td align="center">
 
-3 496</td>
+3 531</td>
       <td align="center">
 
-807</td>
+815</td>
       <td align="center">
 
-134</td>
+136</td>
     </tr>
   </tbody>
 </table>
 
 **Nota:**
 
-Modifications effectuées en conséquence de l'article 2-I 2° de la loi n° 2016-1917 du 29 décembre 2016.
+Modifications effectuées en conséquence de l'article 2-2° a de la loi n° 2017-1837 du 30 décembre 2017.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Arrêté du 2 mai 2017 - art. 1
+  - Arrêté du 20 juin 2018 - art. 1
