--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 18-0 bis C - 26887073.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 18-0 bis C - 26887073.md
@@ -1,16 +1,20 @@
 # Article 18-0 bis C
 
-Pour l'application du premier alinéa du IV de l'article 199 novovicies du code général des impôts, les communes se
-caractérisant par un déséquilibre important entre l'offre et la demande de logements s'entendent de celles classées dans les
-zones A et B1 telles qu'elles sont définies à l'article R. 304-1 du code de la construction et de l'habitation.
+Pour l'application du IV de l'article 199 novovicies du code général des impôts, les communes se caractérisant par un
+déséquilibre important entre l'offre et la demande de logements s'entendent de celles classées dans les zones A et B1 telles
+qu'elles sont définies à l'article R. 304-1 du code de la construction et de l'habitation.
+
+**Nota:**
+
+Modification effectuée en conséquence de l'article 68-I-1° et III de la loi n° 2017-1837 du 30 décembre 2017.
 
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Arrêté du 29 décembre 2012 - art. 2
+  - Arrêté du 20 juin 2018 - art. 1
 
 _Cite_:
 
-  - Code général des impôts, CGI. - art. 199 novovicies (V)
-  - Code de la construction et de l'habitation. - art. R304-1 (V)
+  - Code général des impôts, CGI. - art. 199 novovicies
+  - Code de la construction et de l'habitation. - art. R304-1
