--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 155 bis A - 22763983.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 155 bis A - 22763983.md
@@ -1,6 +1,6 @@
 # Article 155 bis A
 
-Les tarifs de la taxe minière sur l'or en Guyane applicables en 2017 sont fixés comme suit :
+Les tarifs de la taxe minière sur l'or en Guyane applicables en 2018 sont fixés comme suit :
 
 <table border="1">
   <tbody>
@@ -28,7 +28,7 @@ Petites et moyennes entreprises
 </td>
       <td align="center">
 
-362,95</td>
+358,30</td>
     </tr>
     <tr>
       <td align="center">
@@ -38,7 +38,7 @@ Autres entreprises
 </td>
       <td align="center">
 
-725,90</td>
+716,60</td>
     </tr>
   </tbody>
 </table>
@@ -50,7 +50,7 @@ l'Etat en application des articles 1641 et 1644 du code général des impôts.
 
 _Modifié par_:
 
-  - Arrêté du 3 novembre 2017 - art. 1
+  - Arrêté du 2 août 2018 - art. 1
 
 _Cite_:
 
