--- a/02. Livre II : Recouvrement de l'impôt/Article 188 C - 6301960.md
+++ b/02. Livre II : Recouvrement de l'impôt/Article 188 C - 6301960.md
@@ -1,7 +1,13 @@
 # Article 188 C
 
-Les personnes morales visées à l'article 108 du code général des impôts versent l'impôt afférent aux intérêts de bons de
-caisse à la recette des impôts de la          direction des impôts des non-résidents.
+Les personnes morales visées à l'article 108 du code général des impôts versent l'impôt afférent aux intérêts des bons de
+caisse au service des impôts auquel doit parvenir leur déclaration de résultat ou, à défaut d'une telle déclaration, au
+service des impôts dont relève leur siège social.
+
+**Nota:**
+
+Conformément à l'article 2 de l'arrêté du 28 août 2018, les présentes dispositions s'appliquent aux déclarations souscrites
+au titre des revenus, produits et gains dont le fait générateur d'imposition intervient à compter du 1er septembre 2018.
 
 **Liens relatifs à cet article**
 
@@ -11,7 +17,7 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°2017-1197 du 26 juillet 2017 - art. 1 (VD)
+  - Arrêté du 28 août 2018 - art. 1
 
 _Cite_:
 
