--- a/02. Livre II : Recouvrement de l'impôt/Article 188 H - 6302013.md
+++ b/02. Livre II : Recouvrement de l'impôt/Article 188 H - 6302013.md
@@ -1,16 +1,16 @@
 # Article 188 H
 
-1. La retenue opérée par les agences ou succursales des établissements de crédit peut faire l'objet de versements globaux.
-Dans ce cas l'organisme centralisateur dresse et conserve pour chaque versement un état faisant apparaître le montant des
-sommes versées pour le compte de chacune des agences ou succursales. Les liasses visées au 3 de l'article 17 A sont
-conservées soit par l'organisme centralisateur soit par l'agence ou succursale. 
+1. La retenue opérée par les agences ou succursales des établissements de crédit ou des entreprises fait l'objet de
+versements globaux. L'organisme centralisateur dresse et conserve pour chaque versement un état faisant apparaître le montant
+des sommes versées pour le compte de chacune des agences ou succursales. Les liasses visées au 3 de l'article 17 A sont
+conservées soit par l'organisme centralisateur soit par l'agence ou succursale.
 
-2. La possibilité d'effectuer des versements globaux est subordonnée au dépôt d'une déclaration à la          direction des
-impôts des non-résidents. Cette déclaration, établie sur papier libre, est signée de la personne habilitée à engager
-l'établissement justifiant de son identité et de l'étendue de ses pouvoirs et contient la désignation de chacune des agences
-ou succursales pour le compte desquelles les versements seront effectués ainsi que du lieu où seront conservées les liasses
-visées au 1. Toute modification des indications qu'elle comporte fait l'objet d'une nouvelle déclaration souscrite dans les
-mêmes formes. Chaque déclaration prend effet dès le versement afférent au mois au cours duquel elle intervient.
+2. (Abrogé)
+
+**Nota:**
+
+Conformément à l'article 2 de l'arrêté du 28 août 2018, les présentes dispositions s'appliquent aux déclarations souscrites
+au titre des revenus, produits et gains dont le fait générateur d'imposition intervient à compter du 1er septembre 2018.
 
 **Liens relatifs à cet article**
 
@@ -20,7 +20,7 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°2017-1197 du 26 juillet 2017 - art. 1 (VD)
+  - Arrêté du 28 août 2018 - art. 1
 
 _Cité par_:
 
