--- a/02. Livre II : Recouvrement de l'impôt/Article 188 I - 6302018.md
+++ b/02. Livre II : Recouvrement de l'impôt/Article 188 I - 6302018.md
@@ -1,19 +1,22 @@
 # Article 188 I
 
 Le prélèvement opéré par les agences et succursales des établissements de crédit par les caisses publiques et par les caisses
-d'épargne peut faire l'objet de versements globaux dans les conditions prévues à l'article 188 H. 
-
-La déclaration préalable qui doit être adressée à la          direction des impôts des non-résidents peut viser à la fois le
-versement de la retenue à la source prévue audit article et celui du prélèvement. 
+d'épargne ou par les succursales des entreprises fait l'objet de versements globaux dans les conditions prévues à l'article
+188 H.
 
 Ces dispositions ne sont pas applicables au prélèvement dû à raison des revenus, produits et gains mentionnés à l'article 125
 D du code général des impôts.
+
+**Nota:**
+
+Conformément à l'article 2 de l'arrêté du 28 août 2018, les présentes dispositions s'appliquent aux déclarations souscrites
+au titre des revenus, produits et gains dont le fait générateur d'imposition intervient à compter du 1er septembre 2018.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2017-1197 du 26 juillet 2017 - art. 1 (VD)
+  - Arrêté du 28 août 2018 - art. 1
 
 _Cité par_:
 
