--- a/02. Livre II : Recouvrement de l'impôt/Article 188 J - 6301973.md
+++ b/02. Livre II : Recouvrement de l'impôt/Article 188 J - 6301973.md
@@ -1,8 +1,13 @@
 # Article 188 J
 
 Le service des impôts compétent pour recouvrer l'impôt mentionné à l'article 381 K de l'annexe III au code général des impôts
-est la recette de la          direction des impôts des non-résidents, quel que soit le lieu de situation de la collectivité
-émettrice.
+est le service des impôts auquel doit parvenir la déclaration de résultat ou, à défaut d'une telle déclaration, au service
+des impôts dont relève le siège social de la collectivité émettrice.
+
+**Nota:**
+
+Conformément à l'article 2 de l'arrêté du 28 août 2018, les présentes dispositions s'appliquent aux déclarations souscrites
+au titre des revenus, produits et gains dont le fait générateur d'imposition intervient à compter du 1er septembre 2018.
 
 **Liens relatifs à cet article**
 
@@ -12,7 +17,7 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°2017-1197 du 26 juillet 2017 - art. 1 (VD)
+  - Arrêté du 28 août 2018 - art. 1
 
 _Cite_:
 
