--- a/02. Livre II : Recouvrement de l'impôt/Article 188 K - 19493933.md
+++ b/02. Livre II : Recouvrement de l'impôt/Article 188 K - 19493933.md
@@ -1,24 +1,26 @@
 # Article 188 K
 
-Le prélèvement prévu à l'article 117 quater du code général des impôts est versé : 
+Le prélèvement prévu à l'article 117 quater du code général des impôts est versé :
 
-1° A la recette des impôts des non-résidents de la          direction des impôts des non-résidents, lorsqu'il est opéré par
-la personne mentionnée au II de l'article 117 quater précité ou par celle mentionnée au b du III du même article et mandatée
-par le contribuable à cet effet ; 
+1° A la recette des impôts des non-résidents de la direction des impôts des non-résidents, lorsqu'il est opéré par la
+personne mentionnée au b du III de l'article 117 quater précité et mandatée par le contribuable à cet effet ;
 
-2° Par exception au 1°, au service des impôts auquel doit parvenir la déclaration de résultat de la personne mentionnée au II
-de l'article 117 quater précité ou, à défaut d'une telle déclaration, au service des impôts dont relève son siège social,
-lorsque le prélèvement est opéré par cette personne et que celle-ci est, à la date de paiement dudit prélèvement, redevable
-uniquement de ce prélèvement ou des prélèvements sociaux dus en application du 1° du I de l'article L. 136-7 du code de la
-sécurité sociale ; 
+2° Service des impôts auquel doit parvenir la déclaration de résultat de la personne mentionnée au II de l'article 117 quater
+précité ou, à défaut d'une telle déclaration, au service des impôts dont relève son siège social, lorsque le prélèvement est
+opéré par cette personne ;
 
 3° Au service des impôts du domicile du contribuable, lorsque ce dernier effectue lui-même le paiement dudit prélèvement.
+
+**Nota:**
+
+Conformément à l'article 2 de l'arrêté du 28 août 2018, les présentes dispositions s'appliquent aux déclarations souscrites
+au titre des revenus, produits et gains dont le fait générateur d'imposition intervient à compter du 1er septembre 2018.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2017-1197 du 26 juillet 2017 - art. 1 (VD)
+  - Arrêté du 28 août 2018 - art. 1
 
 _Cite_:
 
