--- a/02. Livre II : Recouvrement de l'impôt/Article 188 L - 19493927.md
+++ b/02. Livre II : Recouvrement de l'impôt/Article 188 L - 19493927.md
@@ -1,21 +1,22 @@
 # Article 188 L
 
 Le prélèvement prévu à l'article 117 quater du code général des impôts opéré par les agences et succursales des
-établissements de crédit, par les caisses publiques et par les caisses d'épargne peut faire l'objet de versements globaux
-dans les conditions prévues à l'article 188 H. 
-
-La déclaration préalable qui doit être adressée à la          direction des impôts des non-résidents peut viser à la fois le
-versement de la retenue prévue au 2 de l'article 119 bis du code général des impôts et celui des prélèvements mentionnés aux
-articles 125 A et 117 quater du même code. 
+établissements de crédit, par les caisses publiques, par les caisses d'épargne et par les entreprises fait l'objet de
+versements globaux dans les conditions prévues à l'article 188 H.
 
 Ces dispositions ne sont pas applicables lorsque le prélèvement est acquitté dans les conditions du III de l'article 117
 quater précité.
+
+**Nota:**
+
+Conformément à l'article 2 de l'arrêté du 28 août 2018, les présentes dispositions s'appliquent aux déclarations souscrites
+au titre des revenus, produits et gains dont le fait générateur d'imposition intervient à compter du 1er septembre 2018.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2017-1197 du 26 juillet 2017 - art. 1 (VD)
+  - Arrêté du 28 août 2018 - art. 1
 
 _Cité par_:
 
