--- a/02. Livre II : Recouvrement de l'impôt/Article 188-0 H - 6301967.md
+++ b/02. Livre II : Recouvrement de l'impôt/Article 188-0 H - 6301967.md
@@ -1,7 +1,13 @@
 # Article 188-0 H
 
-La retenue à la source prévue au 2 de l'article 119 bis du code général des impôts est versée à la recette des impôts de la
-direction des impôts des non-résidents.
+La retenue à la source prévue au 2 de l'article 119 bis du code général des impôts est versée au service des impôts auquel
+doit parvenir la déclaration de résultat du redevable ou, à défaut d'une telle déclaration, au service des impôts dont relève
+son siège social.
+
+**Nota:**
+
+Conformément à l'article 2 de l'arrêté du 28 août 2018, les présentes dispositions s'appliquent aux déclarations souscrites
+au titre des revenus, produits et gains dont le fait générateur d'imposition intervient à compter du 1er septembre 2018.
 
 **Liens relatifs à cet article**
 
@@ -11,7 +17,7 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°2017-1197 du 26 juillet 2017 - art. 1 (VD)
+  - Arrêté du 28 août 2018 - art. 1
 
 _Cite_:
 
