--- a/02. Livre II : Recouvrement de l'impôt/Article 188-0 I - 6301969.md
+++ b/02. Livre II : Recouvrement de l'impôt/Article 188-0 I - 6301969.md
@@ -1,8 +1,9 @@
 # Article 188-0 I
 
 I. – Le prélèvement sur les produits de placements à revenu fixe prévu à l'article 125 A du code général des impôts est versé
-à la recette des impôts de la direction des impôts des non-résidents, lorsqu'il est dû à raison de revenus, produits et gains
-mentionnés aux articles 125-0 A et 125 A du code précité.
+au service des impôts auquel doit parvenir la déclaration de résultat du redevable ou, à défaut d'une telle déclaration, au
+service des impôts dont il relève, lorsqu'il est dû à raison de revenus, produits et gains mentionnés aux articles 125-0 A et
+125 A du code précité.
 
 II. – Le prélèvement mentionné au I dû à raison des revenus, produits et gains visés aux I et II de l'article 125 D du code
 général des impôts est versé :
@@ -12,9 +13,10 @@ personne qui assure le paiement desdits revenus, produits et gains et qu'elle es
 
 2° Au service des impôts du domicile du contribuable, lorsque ce dernier effectue lui-même le paiement dudit prélèvement.
 
-III.-Le prélèvement mentionné au I sur les intérêts dus par les offices notariaux au titre des produits de compte de
-consignation, de dépôt spécifique et de titres consignés est versé au service des impôts auquel doit parvenir la déclaration
-de résultat du redevable ou, à défaut d'une telle déclaration, au service des impôts dont il relève.
+**Nota:**
+
+Conformément à l'article 2 de l'arrêté du 28 août 2018, les présentes dispositions s'appliquent aux déclarations souscrites
+au titre des revenus, produits et gains dont le fait générateur d'imposition intervient à compter du 1er septembre 2018.
 
 **Liens relatifs à cet article**
 
@@ -24,7 +26,7 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Arrêté du 20 novembre 2017 - art. 1
+  - Arrêté du 28 août 2018 - art. 1
 
 _Cite_:
 
